# lbmpy

./: .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  AUTHORS.txt  CHANGELOG.md  CONTRIBUTING.md  COPYING.txt  MANIFEST.in  README.md  RELEASE-VERSION  boundaries.py  boundary_handling.py  boundaryhandling.py  cache.py  collisionoperator.py  conftest.py  continuous_distribution_measures.py  createmethodfromdict.py  creationfunctions.py  cuda.py  cudajit.py  cumulantlatticemodel.py  cumulants.py  densityVelocityExpressions.py  diskcache.py  entropic.py  equilibria.py  fieldaccess.py  forcemodels.py  generator.py  geometry.py  gridvisualization.py  helperkernels.py  innerloopsplit.py  jit.py  latticemodel.py  lbmgenerator.py  lbmmethod.py  lbstep.py  (+31 more)
binder/: environment.yml  start
boundaries/: __init__.py  boundary_handling.py  boundary_kernel.py  boundaryconditions.py  boundaryhandling.py  boundaryhandling_old.py  createindexlist.py  createindexlistcython.pyx  forceevaluation.py  geometry.py  handlinginterface.py  periodicityhandling.py
chapman_enskog/: ChapmanEnskog-MultiDim.ipynb  ChapmanEnskog.ipynb  ChapmanEnskogNewDerivativeObjects.ipynb  ChapmanEnskogUsingLbmpy.ipynb  __init__.py  chapman_enskog.py  chapman_enskog_higher_order.py  chapman_enskog_old.py  chapman_enskog_steady_state.py  derivative.py  steady_state.py
doc/: conf.py  index.rst  version_from_git.py
lbmpy/: __init__.py  boundaries_in_kernel.py  continuous_distribution_measures.py  creationfunctions.py  cumulants.py  custom_code_nodes.py  enums.py  fieldaccess.py  fluctuatinglb.py  forcemodels.py  geometry.py  innerloopsplit.py  lbstep.py  macroscopic_value_kernels.py  max_domain_size_info.py  maxwellian_equilibrium.py  moments.py  non_newtonian_models.py  oldroydb.py  parameterization.py  partially_saturated_cells.py  plot.py  plot2d.py  quadratic_equilibrium_construction.py  relaxationrates.py  scenarios.py  session.py  simplificationfactory.py  stencils.py  turbulence_models.py  updatekernels.py  utils.py
lbmpy_tests/: lattice_tensors.py  poiseuille.py  test_boundary_handling.py  test_boundary_indexlist_creation.py  test_builtin_periodicity.py  test_central_moment.py  test_central_moment_equivalences.py  test_central_moment_transform.py  test_chapman_enskog.py  test_code_hashequivalence.py  test_compiled_in_boundaries.ipynb  test_conserved_quantity_relaxation_invariance.py  (+57 more)
(+361 files in other folders)
